# $Id: Makefile.am,v 1.5 2003/10/30 18:49:50 root Exp $
AUTOMAKE_OPTIONS = foreign 1.5
EXTRA_DIST = makefile.win
bin_PROGRAMS = ayplayer
noinst_HEADERS = ayplay.h z80.h z80_emu.h

ayplayer_SOURCES = ayplay.c unlzh.c z80.c demo_pl.c \
	asc_pl.c psc_pl.c pt2_pl.c pt3_pl.c stc_pl.c \
	stp_pl.c gtr_pl.c ftc_pl.c sqt_pl.c \
	z80_step.c z80optab.c z80_op1.c z80_op2.c \
	z80_op3.c z80_op4.c z80_op5.c z80_op6.c z80emu.S
