# (c)2003 sisoft\trg - AYplayer.
dnl Process this file with autoconf to produce a configure script.
AC_INIT([ayplayer], [0.99], [sisoft@bk.ru])
AM_INIT_AUTOMAKE([ayplayer],[0.99])
AC_REVISION([$Id: configure.in,v 1.6 2003/11/11 11:46:06 root Exp $])
AC_PREREQ(2.53)
AC_CONFIG_SRCDIR([ayplay.c])
AM_CONFIG_HEADER([config.h])
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_AS

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])
AC_CHECK_HEADER(sys/soundcard.h, oss=yes, oss=no)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_CHECK_FUNCS([memset strcasecmp strchr strncasecmp strrchr ioperm])

dnl Checks asm use.
AC_MSG_CHECKING([for Z80 emulation on ASM])
AC_ARG_ENABLE(asm,AC_HELP_STRING([--enable-asm],[enable Z80 emulation on assembler]),,enable_asm=no)
if test "${enable_asm}x" != "nox"; then
	AC_MSG_RESULT(yes)
else
	ASFLAGS="-DEZ80"
	AC_MSG_RESULT(no)
	AC_DEFINE(EZ80,1,[Disable Z80 emulation on assembler])
fi

dnl for sound output
AC_MSG_CHECKING([for sound output])
AC_ARG_WITH(lptport,AC_HELP_STRING([--with-lptport=hexaddr],[specifies LPT port address (none)]),,with_lptport=no)
case "$with_lptport" in
	no)	if test "x$oss" = "xyes"; then
			AC_MSG_RESULT(OSS emulaion)
		else
			AC_MSG_ERROR(no sound outputs found)
		fi;;
	0x378)	AC_MSG_RESULT(LPT1 (0x378));oss="no";;
	0x278)	AC_MSG_RESULT(LPT2 (0x278));oss="no";;
	0x3bc)	AC_MSG_RESULT(LPT3 (0x3bc));oss="no";;
	0x???)	AC_MSG_RESULT(LPT on $with_lptport);oss="no";;
	*)	AC_MSG_ERROR([Address '$with_lock_style' must be in hex style, ex. 0x378]);;
esac
if test "x$oss" = "xno"; then
	AC_DEFINE_UNQUOTED(LPT_PORT,$with_lptport,[LPT port address])
fi

dnl add warn flags in maintainer mode
if test "x$USE_MAINTAINER_MODE" = "xyes"; then
	CFLAGS="$CFLAGS -Wall -pedantic -O3"
fi

AC_DEFINE_UNQUOTED(UNIX,1,[Compile with UNIX-style includes])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
